# whispers

./: .gitignore  main.py  pyproject.toml
bot/: start.py
configurations/: settings.py
